Test/typing/should_fail/methods_abstract_native.java
package tutu.titi.toto;

abstract class A {

    abstract native void myMethod(){}

}